# build20AcceleratedSpark

./: .gitignore  README.md
Notebooks/: FPGA Data Merge.ipynb  NYTaxiBenchmarks.scala  Scratchpad.ipynb  Standardize Schema.ipynb  Yellow Taxi Initial.ipynb  Yellow Taxi Stream-Local.ipynb  Yellow Taxi Stream.ipynb  fake tests.ipynb
benchmarking/Mison/: BenchmarkTaxi.cpp
benchmarking/listener/: querylistener.scala
benchmarking/queries/: README.md  benchmark_magenta.scala  benchmark_taxi.scala  benchmark_taxi_fpga.scala  benchmark_taxi_select.scala  fix_data.py  fpga_input_times.csv  fpga_proc_times_q1.csv  fpga_proc_times_q2.csv  fpga_proc_times_q3.csv  fpga_taxi_q1.csv  fpga_taxi_q2.csv  fpga_taxi_q3.csv  line_count.csv  logsample.json  magenta.csv  schemas.scala  taxi_q0.csv  taxi_q1.csv  taxi_q1_e8.csv  taxi_q2.csv  taxi_q3.csv  taxi_q4.csv
dataset/: yellow_taxi_files.csv
demo/: README.md  package-lock.json  package.json
demo/public/: index.html
demo/src/: App.css  App.js
docs/: demo-approaches.md  fpga_info.txt
fpga/vstream/queries/: CMakeLists.txt  CMakeSettings.json  cqueries.cpp  helpers.hpp  queries.hpp  taxirow.hpp
fpga/vstream/queries/parser/: field_iter.h  read_vstream.cpp  vstreamcore.h
ingestion/dataset/: DestinationDataUsWest2.json  ErrorFileUsWest2.json  TaxiDatasetList.json  TaxiSourceData.json
ingestion/linkedService/: GetHttpTaxi.json  GetTaxiList.json  PutTaxiFileUSWest2.json  StagingBlobUSWest2.json
ingestion/pipeline/: IterateAndPullUsWest2.json
magenta/pipeline/: generate_data.py
tools/: compute_data_size.ps1
(+25 files in other folders)
